# upadmin

./: .gitignore
.github/workflows/: build.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/web/: index.html
android/app/src/main/cpp/: CMakeLists.txt  mnn_jni.cpp
android/app/src/main/java/com/me/chat/ai/up/admin/: App.kt  MainActivity.kt
android/app/src/main/java/com/me/chat/ai/up/admin/bridge/: AppJsBridge.kt
android/app/src/main/java/com/me/chat/ai/up/admin/download/: ModelDownloadService.kt
android/app/src/main/java/com/me/chat/ai/up/admin/mnn/: MNNLLMEngine.kt  ModelInfo.kt  ModelManager.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/scripts/: build-mnn.sh
iapp/com.me.chat.ai.up.admin/: .project  AndroidManifest.xml
iapp/com.me.chat.ai.up.admin/res/: index.html  index.html.bak
iapp/com.me.chat.ai.up.admin/src/: antinet.myu  mian.iyu  tcgg.iyu  故辞官方.myu
